# Tlab06

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  main.yml
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp
formatter_lib/: CMakeLists.txt  formatter.cpp  formatter.h
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: CMakeLists.txt  solver.h
